Porting code to handle muiltiple rounds of combat

--- a/src/UAFLibTest/UAFLibTest.csproj
+++ b/src/UAFLibTest/UAFLibTest.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseDescriptionLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -55,6 +56,9 @@
       <Project>{c02ed748-c401-4a7e-9ef1-ba6f1a763484}</Project>
       <Name>UAFLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="spells.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
