--- a/src/UAFLib/UAFLib.csproj
+++ b/src/UAFLib/UAFLib.csproj
@@ -85,7 +85,6 @@
     <Content Include="js\ABILITY_DATA.js" />
     <Content Include="js\ABILITY_DATA_TYPE.js" />
     <Content Include="js\ACTIVE_SPELL_LIST.js" />
-    <Content Include="js\alignmentType - Copy.js" />
     <Content Include="js\BASECLASS_LIST.js" />
     <Content Include="js\ERRORLOG.js" />
     <Content Include="js\GPDL.js" />
@@ -94,9 +93,12 @@
     <Content Include="js\GPDL_STACK.js" />
     <Content Include="js\GPDL_STATE.js" />
     <Content Include="js\INDEX.js" />
+    <Content Include="js\INITIATIVE.js" />
     <Content Include="js\interop\UIEventManager.js" />
     <Content Include="js\itemRechargeRate.js" />
     <Content Include="js\MonsterImmunityType.js" />
+    <Content Include="js\PENDING_SPELL_LIST.js" />
+    <Content Include="js\QueuedCombatant.js" />
     <Content Include="js\spellDurationType.js" />
     <Content Include="js\WhatSprite.js" />
     <Content Include="js\DamageComputation.js" />
@@ -242,6 +244,7 @@
     <Content Include="Tests\TestFreeAttacks.js" />
     <Content Include="Tests\TestKill.js" />
     <Content Include="Tests\TestInventory.js" />
+    <Content Include="Tests\TestMultiRoundCombat.js" />
     <Content Include="Tests\TestSimpleAttack.js" />
     <Content Include="Tests\TestSimpleUnarmedAttack.js" />
     <Content Include="Tests\TestSimpleCombatMovement.js" />
