Finished test cases for multi-round combat and moster attacking!

--- a/src/UAFLib/UAFLib.csproj
+++ b/src/UAFLib/UAFLib.csproj
@@ -243,6 +243,7 @@
     <Content Include="Tests\TestCombatMovementAttack.js" />
     <Content Include="Tests\TestGPDL.js" />
     <Content Include="Tests\TestLoadItems.js" />
+    <Content Include="Tests\TestMonsterAttack.js" />
     <Content Include="Tests\TestParseDice.js" />
     <Content Include="Tests\TestRollDice.js" />
     <Content Include="Tests\TestLoadSAs.js" />
