Work on ranged attack test case and fixes associated with that.  Some broken test cases left, but I need to commit my work

--- a/src/UAFLib/UAFLib.csproj
+++ b/src/UAFLib/UAFLib.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="data\items.bin" />
+    <None Include="GlobalsDebugSnippet.snippet" />
     <None Include="packages.config" />
     <None Include="SaveB.pty" />
     <None Include="Tests\Druid.chr" />
