--- a/src/UAFLib/packages.config
+++ b/src/UAFLib/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.SourceLink.Common" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.SourceLink.GitHub" version="1.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
 </packages>
