--- a/src/UAFLibTest/packages.config
+++ b/src/UAFLibTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net461" />
   <package id="protobuf-net" version="3.0.62" targetFramework="net461" />
   <package id="protobuf-net.Core" version="3.0.62" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
