Simple data structure, UI, & serialization work for testing.

--- a/src/UAFWinEd/UAFWinEd.rc
+++ b/src/UAFWinEd/UAFWinEd.rc
@@ -1012,10 +1012,10 @@ BEGIN
                     "Button",BS_AUTO3STATE | BS_MULTILINE | WS_GROUP | WS_TABSTOP,379,195,55,22
 END
 
-IDD_BACKGROUNDPICDLG DIALOG 0, 0, 358, 206
+IDD_BACKGROUNDPICDLG DIALOGEX 0, 0, 483, 212
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Background"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     LTEXT           "Default Background",IDC_STATIC,32,162,64,8
     LTEXT           "Alternate Background",IDC_STATIC,150,162,70,8
@@ -1029,8 +1029,8 @@ BEGIN
     CTEXT           "Use 24 Hour Format",IDC_STATIC,252,43,43,17
     LTEXT           "0 = 12:00 am",IDC_STATIC,311,43,42,8
     LTEXT           "2359 = 11:59 pm",IDC_STATIC,299,53,54,8
-    PUSHBUTTON      "OK",IDOK,245,185,50,14,WS_GROUP
-    DEFPUSHBUTTON   "Cancel",IDCANCEL,301,185,50,14,WS_GROUP
+    PUSHBUTTON      "OK",IDOK,319,191,50,14,WS_GROUP
+    DEFPUSHBUTTON   "Cancel",IDCANCEL,426,191,50,14,WS_GROUP
     PUSHBUTTON      "Load",IDC_SELECTDEFAULT,38,174,50,14
     PUSHBUTTON      "Load",IDC_SELECTALT,162,174,50,14
     EDITTEXT        IDC_DEFAULTFILENAME,3,3,119,22,ES_MULTILINE | ES_READONLY | WS_HSCROLL | WS_GROUP
@@ -1044,6 +1044,18 @@ BEGIN
     PUSHBUTTON      "None",IDC_SELECTSOUND,261,147,75,14
     CTEXT           "Sound played as party enters square",IDC_STATIC,252,129,96,17
     CONTROL         "Suppress Step Sound",IDC_SUPPRESSSTEPSOUND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,255,164,85,10
+    LTEXT           "Num Frames",IDC_STATIC,393,39,40,8
+    EDITTEXT        IDC_BGNUMFRAMES,444,37,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    CTEXT           "Millisecs between frames (0=None, else min = 30)",IDC_STATIC,393,56,83,18
+    LTEXT           "Frame Width",IDC_STATIC,393,7,41,8
+    EDITTEXT        IDC_BGFWIDTH,444,5,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Frame Height",IDC_STATIC,391,21,43,8
+    EDITTEXT        IDC_BGFHEIGHT,444,19,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_BGDELAY,425,79,22,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER
+    PUSHBUTTON      "View Entire Pic",IDC_BGVIEWALLPIC,392,115,70,14
+    PUSHBUTTON      "Start",IDC_BGTOGGLEANIM,382,152,45,14
+    PUSHBUTTON      "Next Frame",IDC_BGNEXTFRAME,431,152,45,14
+    PUSHBUTTON      "Update Frame Data",IDC_BGUPDATESTATS,392,98,70,14
 END
 
 IDD_WALLPICDLG DIALOG 0, 0, 141, 156
@@ -4726,9 +4738,9 @@ BEGIN
     IDD_BACKGROUNDPICDLG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 351
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 199
+        RIGHTMARGIN, 476
+        TOPMARGIN, 1
+        BOTTOMMARGIN, 205
     END
 
     IDD_WALLPICDLG, DIALOG
@@ -5851,6 +5863,11 @@ BEGIN
 END
 
 IDD_GLOBALSOUNDS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_BACKGROUNDPICDLG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
