Adding VS new project new file references for #49

--- a/src/UAFWin/UAFWin_vs2013.vcxproj.filters
+++ b/src/UAFWin/UAFWin_vs2013.vcxproj.filters
@@ -185,6 +185,9 @@
     <ClCompile Include="..\Shared\ramfile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Shared\MessageMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Shared\ASL.h">
@@ -379,7 +382,13 @@
     <ClInclude Include="..\Shared\ramfile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
+    <ClInclude Include="..\Shared\MessageMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Shared\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+   </ItemGroup>
   <ItemGroup>
     <None Include="cursor1.cur" />
     <None Include="cursor2.cur" />
