--- a/src/UAFWin/UAFWin_vs2013.vcxproj
+++ b/src/UAFWin/UAFWin_vs2013.vcxproj
@@ -165,6 +165,7 @@ copy debug\UAFWin.exe ..\..\UAFWin\UAFWin.exe
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Shared\ASL.cpp" />
+    <ClCompile Include="..\Shared\MessageMap.cpp" />
     <ClCompile Include="..\Shared\ramfile.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
@@ -228,6 +229,7 @@ copy debug\UAFWin.exe ..\..\UAFWin\UAFWin.exe
   <ItemGroup>
     <ClInclude Include="..\Shared\ASL.h" />
     <ClInclude Include="..\Shared\bass.h" />
+    <ClInclude Include="..\Shared\MessageMap.h" />
     <ClInclude Include="..\Shared\ramfile.h" />
     <ClInclude Include="CDXBitmapFont.h" />
     <ClInclude Include="..\Shared\Char.h" />
