--- a/src/UAFWinEd/UAFWinEd.rc
+++ b/src/UAFWinEd/UAFWinEd.rc
@@ -2399,12 +2399,13 @@ BEGIN
     CONTROL         "List1",IDC_AVAILLIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | WS_BORDER | WS_TABSTOP,4,14,400,90
     CTEXT           "Items Selected",IDC_STATIC,131,111,48,8
     CONTROL         "List1",IDC_CHOSENLIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | WS_BORDER | WS_TABSTOP,4,122,400,90
-    PUSHBUTTON      "Add",IDC_ADD,53,218,50,14
-    PUSHBUTTON      "Delete",IDC_DELETE,110,218,50,14
-    PUSHBUTTON      "Delete All",IDC_DELETEALL,167,218,50,14
+    PUSHBUTTON      "Add",IDC_ADD,8,218,50,14
+    PUSHBUTTON      "Delete",IDC_DELETE,65,218,50,14
+    PUSHBUTTON      "Delete All",IDC_DELETEALL,122,218,50,14
     PUSHBUTTON      "OK",IDOK,340,217,50,14
     DEFPUSHBUTTON   "Cancel",IDCANCEL,341,234,50,14
-    PUSHBUTTON      "Mark Items Identified",IDC_MarkIdentified,225,218,76,14
+    PUSHBUTTON      "Mark Items Identified",IDC_MarkIdentified,180,218,76,14
+    PUSHBUTTON      "Mark Items Ready",IDC_MarkReady,260,218,76,14
 END
 
 IDD_ITEMEDITOR DIALOG 0, 0, 479, 186
